setup code structure and added routing

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -23,6 +23,6 @@
       </button>
       <span>Movie App</span>
     </mat-toolbar>
-    <app-dashboard></app-dashboard>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
