--- a/src/app/modules/shared/movie-card/movie-card.component.html
+++ b/src/app/modules/shared/movie-card/movie-card.component.html
@@ -11,11 +11,19 @@
   />
   <mat-card-content>
     <div>
-      <mat-icon>home</mat-icon>
+      Movie Name
+      <mat-icon>favorite</mat-icon>
+    </div>
+    <div>
+      Action adventure
+    </div>
+    <div>
+      <app-rating [rating]="3" [itemId]="1"></app-rating>
+      <a>Show more</a>
     </div>
   </mat-card-content>
-  <mat-card-actions>
+  <!-- <mat-card-actions>
     <button mat-button>LIKE</button>
     <button mat-button>SHARE</button>
-  </mat-card-actions>
+  </mat-card-actions> -->
 </mat-card>
