added input in movie card

--- a/src/app/modules/home/dashboard/dashboard.component.html
+++ b/src/app/modules/home/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <app-movie-card></app-movie-card>
+          <app-movie-card [movie]="latestMovieData"></app-movie-card>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
