--- a/src/app/modules/home/dashboard/dashboard.component.scss
+++ b/src/app/modules/home/dashboard/dashboard.component.scss
@@ -18,4 +18,8 @@
 
 .dashboard-card-content {
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
