--- a/src/app/modules/shared/movie-card/movie-card.component.html
+++ b/src/app/modules/shared/movie-card/movie-card.component.html
@@ -11,7 +11,7 @@
   />
   <mat-card-content>
     <div>
-      Movie Name
+      {{ movie.title }}
       <mat-icon>favorite</mat-icon>
     </div>
     <div>
