--- a/src/app/modules/shared/movie-card/movie-card.component.html
+++ b/src/app/modules/shared/movie-card/movie-card.component.html
@@ -6,7 +6,7 @@
   </mat-card-header> -->
   <img
     mat-card-image
-    src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+    [src]="'https://image.tmdb.org/t/p/w500/' + movie.poster_path"
     alt="Photo of a Shiba Inu"
   />
   <mat-card-content>
