--- a/src/app/modules/shared/movie-card/movie-card.component.scss
+++ b/src/app/modules/shared/movie-card/movie-card.component.scss
@@ -12,12 +12,6 @@
   height: 320px;
 }
 
-mat-card {
-  height: 150px;
-  width: 200px;
-}
-
 mat-card-image {
-  width: 200px;
-  height: 320px;
+  width: 120px !important;
 }
