--- a/src/app/modules/shared/movie-card/movie-card.component.html
+++ b/src/app/modules/shared/movie-card/movie-card.component.html
@@ -15,7 +15,7 @@
       <mat-icon>favorite</mat-icon>
     </div>
     <div>
-      Action adventure
+      {{ movie.genre_ids | genre }}
     </div>
     <div>
       <app-rating [rating]="3" [itemId]="1"></app-rating>
