--- a/src/app/modules/shared/movie-card/movie-card.component.scss
+++ b/src/app/modules/shared/movie-card/movie-card.component.scss
@@ -12,6 +12,18 @@
   height: 320px;
 }
 
-mat-card-image {
-  width: 120px !important;
+
+.mat-card-image-custom{
+  width: 120px ;
+ }
+.mat-card-show-more{
+  margin-top: 17px;
+  float: left;
+}
+.mat-card-title{
+  font-size: 20px;
+  text-align: left;
+}
+.mat-card-genres{
+  text-align: left;
 }
