--- a/src/app/modules/shared/movie-card/movie-card.component.html
+++ b/src/app/modules/shared/movie-card/movie-card.component.html
@@ -18,7 +18,7 @@
     </div>
     <div>
       <app-rating [rating]="movie.vote_average | rating" [itemId]="1"></app-rating>
-      <a class="mat-card-show-more">Show more</a>
+      <a href="javascript:void(0)" class="mat-card-show-more">Show more</a>
     </div>
   </mat-card-content>
   <!-- <mat-card-actions>
