--- a/src/app/modules/shared/rating/rating.component.html
+++ b/src/app/modules/shared/rating/rating.component.html
@@ -1,16 +1,16 @@
 <fieldset class="rating">
   <input type="radio" [name]="inputName" value="5" [checked]="rating === 5" />
-  <label title="Rocks!" (click)="onClick(5)">5 stars</label>
+  <label title="Rocks!">5 stars</label>
 
   <input type="radio" [name]="inputName" value="4" [checked]="rating === 4" />
-  <label title="Pretty good" (click)="onClick(4)">4 stars</label>
+  <label title="Pretty good">4 stars</label>
 
   <input type="radio" [name]="inputName" value="3" [checked]="rating === 3" />
-  <label title="Meh" (click)="onClick(3)">3 stars</label>
+  <label title="Meh">3 stars</label>
 
   <input type="radio" [name]="inputName" value="2" [checked]="rating === 2" />
-  <label title="Kinda bad" (click)="onClick(2)">2 stars</label>
+  <label title="Kinda bad">2 stars</label>
 
   <input type="radio" [name]="inputName" value="1" [checked]="rating === 1" />
-  <label title="Sucks big time" (click)="onClick(1)">1 star</label>
+  <label title="Sucks big time">1 star</label>
 </fieldset>
