explore page overview

--- a/src/app/modules/explore/explore/explore.component.scss
+++ b/src/app/modules/explore/explore/explore.component.scss
@@ -3,10 +3,11 @@
     height: 600px;
 }
 .main-details-left{
-    width: 50%;
+    width: 35%;
     font-size: 20px;
+    padding: 50px;
 }
 .main-details-right{
-    width: 50%;
+    width: 35%;
     float: right;
 }
