--- a/src/app/modules/explore/explore/explore.component.html
+++ b/src/app/modules/explore/explore/explore.component.html
@@ -4,10 +4,18 @@
 </div>
 <div class="main-details">
   <div class="main-details-left">
+    <h1> {{(movieDetails |async)?.title }} </h1>
       {{(movieDetails |async)?.overview }}
   </div>
   <div class="main-details-right">
-   2
+    <div>
+      <span>Genre</span>
+      
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+
   </div>
 </div>
 <div class="main-similar">
