--- a/src/app/modules/home/dashboard/dashboard.component.html
+++ b/src/app/modules/home/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
           {{ card.title }}
         </mat-card-title>
         <mat-card-content class="dashboard-card-content">
-          <app-movie-list [movies]="card.movieList | async"></app-movie-list>
+          <app-movie-list [movies]="card.movieList"></app-movie-list>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
