--- a/src/app/modules/explore/explore/explore.component.scss
+++ b/src/app/modules/explore/explore/explore.component.scss
@@ -2,12 +2,40 @@
     width: 100%;
     height: 600px;
 }
+.main-details{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-around;
+}
 .main-details-left{
     width: 35%;
     font-size: 20px;
     padding: 50px;
+    flex: 0 1 calc(50% -50px);
 }
 .main-details-right{
+    
     width: 35%;
+    padding: 50px;
+    flex: 0 1 calc(50% -50px);
+   
+}
+.main-details-right-genre{
+    background-color: rgba(0,0,0,.05);
+    font-size: 20px;
+    
+    padding: 20px;
+    border-bottom: 0.5px solid;
+}
+.main-details-right-genre-data{
+    font-size: 20px;
     float: right;
+}
+.main-details-right-genre-key{
+    font-size: 30px;
+    font-weight: bold;
+}
+.explore-rating{
+    float: right;
+    margin-top: -25px;
 }
