--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,15 +1,4 @@
-<mat-sidenav-container class="sidenav-container">
-  <!-- <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list>
-  </mat-sidenav> -->
+<mat-sidenav-container class="sidenav-container">  
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <button
@@ -23,7 +12,7 @@
       </button>
       <span>Movie App</span>
       <button mat-button [routerLink]="['/home']">Home</button>
-      <button mat-button [routerLink]="['/explore']">Explore</button>
+      <button mat-button >Explore</button>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
