--- a/src/app/modules/home/movie-list/movie-list.component.html
+++ b/src/app/modules/home/movie-list/movie-list.component.html
@@ -1,5 +1,5 @@
 <app-slider>
-  <div appSliderItem *ngFor="let movie of  (movies | async)?.results">
+  <div appSliderItem *ngFor="let movie of movies | async">
     <app-movie-card [movie]="movie"></app-movie-card>
   </div>
 </app-slider>
