--- a/src/app/modules/shared/slider/slider.component.html
+++ b/src/app/modules/shared/slider/slider.component.html
@@ -1,4 +1,4 @@
-<div class="slider-container">
+<div class="slider-container" style=" width: 93vw;">
   <div class="slides" #slides>
     <ng-content select="[appSliderItem]" #sliderItem></ng-content>
   </div>
